
// The following bugs have been fixed:

//* wsbuglink:5000[]
//* wsbuglink:6000[Wireshark bug]
//* cveidlink:2014-2486[]
//* Wireshark keeps banging out random chords on your piano and yelling “LIPS LIKE SUGUAR, SUGAR KISSES” because it was funny that one time at a party.

=== New and Updated Features

The following features are new (or have been significantly updated) since version 3.4.0:

* TCP conversations now support a completeness criteria, which facilitates the identification of TCP streams having any
  of opening or closing handshakes, a payload, in any combination. It is accessed with the new tcp.completeness filter.

* Protobuf fields that are not serialized on the wire (missing in capture files) can now be displayed with default values
  by setting the new 'add_default_value' preference. The default values might be explicitly declared in 'proto2' files,
  or false for bools, first value for enums, zero for numeric types.

* Wireshark now supports reading Event Tracing for Windows (ETW). A new extcap named ETW reader is created that now can open an etl file, convert all
  events in the file to DLT_ETW packets and write to a specified FIFO destination. Also, a new packet_etw dissector is
  created to dissect DLT_ETW packets so Wireshark can display the DLT_ETW packet header, its message and packet_etw dissector
  calls packet_mbim sub_dissector if its provider matches the MBIM provider GUID.

// === Removed Features and Support

//=== Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// "Full protocol name (Abbreviation)"
O-RAN fronthaul UC-plane (O-RAN)
[commaize]
--
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.