@@ -46,7 +46,7 @@ endif()
 set (MMDBRESOLVE_EXE ${MAXMINDDB_FOUND})
 
 # Must match ${EXTRA_INSTALLER_DIR}/Npcap-X.Y.Z.exe
-set(NPCAP_PACKAGE_VERSION "1.00")
+set(NPCAP_PACKAGE_VERSION "1.10")
 
 set(USBPCAP_PACKAGE_VERSION "1.5.4.0")
 
