@@ -69,8 +69,8 @@ Param(
 # trouble instead of trying to catch exceptions everywhere.
 $ErrorActionPreference = "Stop"
 
-$Win64CurrentTag = "2020-12-09"
-$Win32CurrentTag = "2020-12-09"
+$Win64CurrentTag = "2020-12-14"
+$Win32CurrentTag = "2020-12-14"
 
 # Archive file / SHA256
 $Win64Archives = @{
@@ -133,12 +133,12 @@ $ArchivesSubDirectory = @{
 # Plain file downloads
 
 $Win32Files = @{
-    "npcap-1.00.exe" = "488ab12e28e81d0dcf3d5d996f9cb676293f6f73b39e9c99476b5a44cec2250a";
+    "npcap-1.10.exe" = "bcfbc57d41c00e40298c5c3040264e694cc8fc7da55939729aedc1041c8e92dd";
     "USBPcapSetup-1.5.4.0.exe" = "87a7edf9bbbcf07b5f4373d9a192a6770d2ff3add7aa1e276e82e38582ccb622";
 }
 
 $Win64Files = @{
-    "npcap-1.00.exe" = "488ab12e28e81d0dcf3d5d996f9cb676293f6f73b39e9c99476b5a44cec2250a";
+    "npcap-1.10.exe" = "bcfbc57d41c00e40298c5c3040264e694cc8fc7da55939729aedc1041c8e92dd";
     "USBPcapSetup-1.5.4.0.exe" = "87a7edf9bbbcf07b5f4373d9a192a6770d2ff3add7aa1e276e82e38582ccb622";
 }
 
